alignment fixes by media query

--- a/blocks/buttons.css
+++ b/blocks/buttons.css
@@ -48,7 +48,7 @@
   .button__edit {
     height: 18px;
     width: 18px;
-    margin: 0;
+
     align-self: center;
     background-color: black;
   }
@@ -59,5 +59,22 @@
     width: 282px;
     padding: 0;
     margin-bottom: 36px;
+  }
+
+  .button__frame-edit {
+    margin-right: 36px;
+  }
+}
+
+@media screen and (min-width: 544px) and (max-width: 880px) {
+  .button__frame-add {
+    border: white solid 2px;
+    height: 50px;
+    width: 228px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 36px auto 36px auto;
+    padding: 0;
   }
 }
