--- a/blocks/destinations.css
+++ b/blocks/destinations.css
@@ -14,3 +14,12 @@
     grid-gap: 20px;
   }
 }
+
+@media screen and (min-width: 544px) and (max-width: 880px) {
+  .destinations {
+    max-width: 544px;
+    margin: 0 auto 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px 17px;
+  }
+}
