--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,3 +11,9 @@
     max-width: 320px;
   }
 }
+
+@media screen and (min-width: 544px) and (max-width: 880px) {
+  .page {
+    max-width: 100%;
+  }
+}
