--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -37,7 +37,7 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 1.1;
-  width: 373px;
+  max-width: 373px;
   display: flex;
   flex-direction: row;
   margin: 0;
@@ -95,15 +95,31 @@
     font-size: 22px;
     line-height: 1.2;
     max-width: 320px;
-
-    margin: 0;
+    justify-self: center;
+    margin: 0 0 0 62px;
   }
 
   .profile__profession {
     font-size: 14px;
     line-height: 1.2;
-    width: 282px;
+    max-width: 282px;
     margin: 0 auto 36px auto;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 544px) and (max-width: 880px) {
+  .profile {
+    max-width: 100%;
+    margin: 0 auto 0 auto;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
+
+  .profile__profession {
+    max-width: 100%;
     text-align: center;
   }
 }
